# legalnlp

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
assets/: logo_variants.html
config/: app.toml  issues.toml
pages/: document_statistics.py  document_terms.py  issues_overview.py  page_1.py  page_2.py  position_check.py  relationship_graph.py  search.py  topic_exploration.py  topic_explorer.py
scripts/: make_test_docs.py
src/: app_state.py  shared.py
src/comments/: extract.py  render.py
src/nlp/: entailment.py  graph.py
src/package/: extract_comments.py  render_comments.py
src/redlines/: extract.py
src/stats/: compute.py  config.py  render.py  ui.py
src/topics/: model.py  render.py
src/utils/: models.py  page.py  text.py
test_docs/: nda.docx  services_agreement.docx
tests/: test_comments_extract.py  test_highlight.py  test_redlines_extract.py  test_shared.py  test_stats_compute.py  test_stats_ui.py  test_utils_text.py
