[project]
name = "legalnlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "bertopic>=0.17.3",
    "datamapplot>=0.6.2",
    "plotly[express]>=6.6.0",
    "spacy>=3.8.11",
    "sentence-transformers>=5.1.1",
    "st-annotated-text>=4.0.2",
    "streamlit>=1.55.0",
    "umap-learn>=0.5.9.post2",
    "pystemmer>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/package"]
