[project]
name = "legalnlp"
version = "0.1.0"
authors = [
    { name = "Tudor F. Capusan", email = "tudor38@gmail.com" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "bertopic>=0.17.3",
    "datamapplot>=0.6.2",
    "plotly[express]>=6.6.0",
    "spacy>=3.8.11",
    "sentence-transformers>=5.1.1",
    "st-annotated-text>=4.0.2",
    "streamlit>=1.55.0",
    "umap-learn>=0.5.9.post2",
    "pystemmer>=3.0.0",
    "en-core-web-sm>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
]
[tool.hatch.build.targets.wheel]
packages = ["src/package"]
